add styling to jumbotron to make title more legible

--- a/server/public/views/templates/header.html
+++ b/server/public/views/templates/header.html
@@ -1,2 +1,4 @@
-<h1>Pick-a-Pet!</h1>
-<p>Even strange ones.  Especially strange ones.</p>
+<div class="transbox">
+  <h1>Pick-a-Pet!</h1>
+  <p>Even strange ones.  Especially strange ones.</p>
+</div>
