--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,11 +1,19 @@
 .jumbotron {
-  color: #80B;
-  text-shadow: 1px 1px 1px #777;
-  font-weight:800;
   background-image: url('../images/grass-background.jpg');
 }
 
-.jumbotron p {
+.transbox {
+  width: 550px;
+  margin: auto;
+  background-color: #888;
+  opacity: 0.85;
+  color: #80B;
+  text-shadow: 1px 1px 1px #777;
+  font-weight:800;
+  font-size: 24px;
+}
+
+.transbox p {
   font-weight:600;
   font-size: 24px;
 }
