--- a/server/public/views/templates/header.html
+++ b/server/public/views/templates/header.html
@@ -1,4 +1,3 @@
 <div class="transbox">
-  <h1>Pick-a-Pet!</h1>
-  <p>Even strange ones.  Especially strange ones.</p>
+  <h1>Superpowered DB of Superheroes</h1>
 </div>
