--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -2,14 +2,14 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Pick-a-Pet</title>
+    <title>Superpowered DB of Superheroes</title>
     <!-- Angular -->
     <script type="text/javascript" src="/vendors/angular.min.js"></script>
     <script type="text/javascript" src="/vendors/angular-route.min.js"></script>
     <script type="text/javascript" src="/scripts/ang_app.js"></script>
     <script type="text/javascript" src="/scripts/factories/dataFactory.js"></script>
-    <script type="text/javascript" src="/scripts/controllers/HomeController.js"></script>
-    <script type="text/javascript" src="/scripts/controllers/FavController.js"></script>
+    <script type="text/javascript" src="/scripts/controllers/NewController.js"></script>
+    <script type="text/javascript" src="/scripts/controllers/ListController.js"></script>
 
     <link rel="stylesheet" href="/vendors/bootstrap.min.css" />
     <link rel="stylesheet" href="/styles/style.css" />
