--- a/server/public/views/templates/nav.html
+++ b/server/public/views/templates/nav.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-md-4 col-md-offset-4">
     <ul class="nav nav-pills nav-justified">
-      <li><a href="#home">Find an Animal</a></li>
-      <li><a href="#fav">Favorites</a></li>
+      <li><a href="#new">Add a Hero</a></li>
+      <li><a href="#list">Hero List</a></li>
     </ul>
   </div>
 </div>
