--- a/server/public/views/templates/footer.html
+++ b/server/public/views/templates/footer.html
@@ -1,5 +1,4 @@
 <div class="container-fluid">
-  <h3 class="text-center"><span class="glyphicon glyphicon-star"></span> A Lonehawk-40 Production <span class="glyphicon glyphicon-star"></span></h3>
-  <p class="text-center">Powered by
-    <a href="https://www.petfinder.com">Petfinder</a></p>
+  <h3 class="text-center">A Lonehawk-40 Production</h3>
+  <p class="text-center">Powered by The Department of Superhero Knowledge</p>
 </div>
