--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,7 +1,3 @@
-.jumbotron {
-  background-image: url('../images/grass-background.jpg');
-}
-
 .transbox {
   width: 550px;
   margin: auto;
@@ -71,4 +67,8 @@ h2 button {
   font-weight: normal;
   padding: 6px;
   margin-top: 5px;
+}
+
+th, td {
+  padding: 6px;
 }
